--- a/course-team.qmd
+++ b/course-team.qmd
@@ -8,17 +8,16 @@ title: "Teaching team"
 
 [**Dr. Mine Çetinkaya-Rundel**](http://mine-cr.com/) (she/her) is Professor of the Practice and Director of Undergraduate Studies at the [Department of Statistical Science](https://stat.duke.edu/) at Duke University and an affiliated faculty in the [Computational Media, Arts, and Cultures](https://cmac.duke.edu/). Mine's work focuses on innovation in statistics and data science pedagogy, with an emphasis on computing, reproducible research, student-centered learning, and open-source education as well as pedagogical approaches for enhancing retention of women and under-represented minorities in STEM.
 
-| Office hours       | Location                                                                               |
-|--------------------|----------------------------------------------------------------------------------------|
-| Wednesday 8 - 9 pm | [Zoom](https://sakai.duke.edu/portal/directtool/c3f055cb-2cdc-4527-a88e-b75d1162784c/) |
-| By appointment     | Old Chem 213 or Zoom                                                                   |
+| Office hours            | Location                            |
+|-------------------------|-------------------------------------|
+| Tuesdays 2:30 - 3:30 pm | Old Chem 213 (or Zoom upon request) |
 
 ## Teaching assistants
 
-|                                           | Name                                                            | Role       | Lab section       | Office hours                                                                                              |
-|-------------|--------------------|-------------|-------------|-------------|
-| ![](images/team/jackie.png){width="100"}  | [Jackie Du](https://www.linkedin.com/in/jacquelyn-du)           | Head TA    |                   | Tuesday 4-6pm - Edge Project Room 7                                                                       |
-| ![](images/team/lorenzo.png){width="100"} | [Lorenzo Mauri](https://scholars.duke.edu/person/lorenzo.mauri) | Lab TA     | W 1:45PM - 3:00PM | Monday 5-7pm - Old Chemistry 203b                                                                         |
-| ![](images/team/sam.png){width="100"}     | [Sam Rosen](https://samgrosen.github.io/)                       | Lab TA     | W 3:30PM - 4:45PM | Tuesday 1:30-3:30pm - [Zoom](https://sakai.duke.edu/portal/directtool/c3f055cb-2cdc-4527-a88e-b75d1162784c/)                                                                        |
-| ![](images/team/evan.png){width="100"}    | [Evan Dragich](https://www.linkedin.com/in/evandragich/)        | Lecture TA |                   | Monday 10am-12pm - [Zoom](https://sakai.duke.edu/portal/directtool/c3f055cb-2cdc-4527-a88e-b75d1162784c/) |
-| ![](images/team/holly.png){width="100"}   | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/)   | TA         |                   | Monday 1-3pm - [Zoom](https://sakai.duke.edu/portal/directtool/c3f055cb-2cdc-4527-a88e-b75d1162784c/)     |
+|                                         | Name                                                          | Role                         | Lab section       | Office hours |
+|--------------|----------------|--------------|--------------|--------------|
+| ![](images/team/holly.png){width="100"} | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/) | Lab TA                       | W 1:25PM - 2:40PM | TBA          |
+| ![](images/team/eli.png){width="100"}   | [Eli Gnesin](https://www.linkedin.com/in/elignesin/)          | Head + Lab TA                | W 3:05PM - 4:20PM | TBA          |
+| ![](images/team/glenn.png)              | [Glenn Palmer](https://scholars.duke.edu/person/glenn.palmer) | HW Lead                      |                   | TBA          |
+| ![](images/team/kelsey.png)             | [Kelsey Brod](https://www.kelseybrod.com/)                    | Project lead + Lecture TA    |                   | TBA          |
+| ![](images/team/shelby.png)             | [Shelby Tisdale](https://www.linkedin.com/in/shelby-tisdale/) | Project support + Lecture TA |                   | TBA          |
