--- a/index.qmd
+++ b/index.qmd
@@ -6,30 +6,24 @@ execute:
 
 This page contains an outline of the topics, content, and assignments for the semester. Note that this schedule will be updated as the semester progresses and the timeline of topics and assignments might be updated throughout the semester.
 
-::: callout-warning
-UPDATE SCHEDULE
-:::
-
 ```{r}
 #| echo: false
 #| message: false
 #| warning: false
-#| eval: false
 
 library(googlesheets4)
 library(gt)
 library(tidyverse)
 gs4_deauth()
-d <- read_sheet("https://docs.google.com/spreadsheets/d/1XBJwiTSZ9uYwLzTjEs-0lHFHkH4KPckP_MIO7q57SJ0/edit?usp=sharing")
+d <- read_sheet("https://docs.google.com/spreadsheets/d/1-xWfswYsaEwoIy5NzIiC6MKZ9MV-CYiEEaRnqKrITf0/edit?usp=sharing")
 ```
 
 ```{r}
 #| echo: false
-#| eval: false
 
 d |>
   filter(!is.na(session)) |>
-  select(-dow, -admin_notes, -number, -session) |>
+  select(-dow, -session) |>
   mutate(date = as.Date(date)) |>
   relocate(due, .after = materials) |>
   gt() |>
