--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -103,18 +103,18 @@ Assessment for the course is comprised of four components: attendance and partic
 
 -   **Attendance and participation** is required throughout the semester. Students who attend at least 80% of the lectures and participate regularly during lecture will receive full credit for this portion of their grade. Participation in labs as well as on Slack will also count towards this component.
 
--   **Reading quizzes** (6), due every other week (roughly), completed individually. Each quiz is worth 2% of the grade. Lowest quiz score is dropped.
+-   **Reading quizzes**, due every other week (roughly), completed individually. Lowest quiz score is dropped.
 
-    Reading quizzes will be linked from the [course schedule](https://www.vizdata.org/schedule.html). They always cover reading that is due since the previous quiz and up to and including the deadline for the given quiz. They're due by 12pm ET (beginning of class) on the indicated day on the [course schedule](https://www.vizdata.org/schedule.html).
+    Reading quizzes will be linked from the [course schedule](https://www.vizdata.org/schedule.html). They always cover reading that is due since the previous quiz and up to and including the deadline for the given quiz. They're due by 10 am ET (beginning of class) on the indicated day on the [course schedule](https://www.vizdata.org/schedule.html).
 
--   **Homework assignments** (6), due every other week (roughly), completed individually. Each homework assignment is worth 8% of the course grade. Lowest homework assignment score is dropped.
+-   **Homework assignments**, due every other week (roughly), completed individually. Lowest homework assignment score is dropped.
 
-    Homework assignments are due by 12pm ET (beginning of class) on the indicated day on the [course schedule](https://www.vizdata.org/schedule.html).
+    Homework assignments are due by 10 pm ET (beginning of class) on the indicated day on the [course schedule](https://www.vizdata.org/schedule.html).
 
 -   **Projects** (2), mid-semester and end of semester, completed in teams.
 
-    -   Project 1: Teams will be given a dataset to visualize. Project 1 is worth 15% of the course grade.
-    -   Project 2: Teams will pick a dataset of interest to them and/or build an R package that implements a new type of data visualization in R. Project 2 is worth 25% of the course grade.
+    -   Project 1: Teams will be given a dataset (or a set of datasets to choose from) to visualize. Project 1 is worth 15% of the course grade.
+    -   Project 2: Teams will choose the focus of their own project. One requirement is that you need to do something new. Project 2 is worth 25% of the course grade.
 
     The deliverables for each project will include a data visualization, a write up of the process and findings, and a presentation. For the second project, you will be encouraged to think beyond a traditional two-dimensional data visualization (e.g. interactive web apps/dashboards, data art, generative art, physical/tangible visualizations, **ggplot2** extensions, etc.).
 
@@ -191,7 +191,7 @@ Policy on late work depends on the particular course component:
 
 -   Reading quizzes: Late quizzes are not accepted and there are no make ups for missed quizzes.
 
--   Homework assignments: GitHub repositories will be closed to contributions at the deadline. If you need to submit your work late, send a DM on Slack to Jackie Du (our Head TA) to reopen your repository.
+-   Homework assignments: GitHub repositories will be closed to contributions at the deadline. If you need to submit your work late, send a DM on Slack to Eli Gnesin (our Head TA) to reopen your repository.
 
     -   Late, but same day (before midnight): -10% of available points
 
@@ -221,7 +221,7 @@ If there are circumstances that are having a longer-term impact on your academic
 
 ### Regrade requests
 
-Regrade requests must be made within one week of when the assignment is returned, and must be typed up and submitted via email to the course Head TA (Jackie Du). These will be considered if points were tallied incorrectly or if you feel your answer is correct but it was marked wrong. No regrade will be made to alter the number of points deducted for a mistake. There will be no grade changes after the second project presentations. Note that during the regrade process your score could go up or go down or not change.
+Regrade requests must be made within one week of when the assignment is returned, and must be typed up and submitted via email to the course Head TA (Eli Gnesin). These will be considered if points were tallied incorrectly or if you feel your answer is correct but it was marked wrong. No regrade will be made to alter the number of points deducted for a mistake. There will be no grade changes after the second project presentations. Note that during the regrade process your score could go up or go down or not change.
 
 *No grades will be changed after the project presentations.*
 
