--- a/course-team.qmd
+++ b/course-team.qmd
@@ -14,10 +14,10 @@ title: "Teaching team"
 
 ## Teaching assistants
 
-|                                         | Name                                                          | Role                         | Lab section       | Office hours |
+|                                          | Name                                                          | Role                         | Lab section       | Office hours |
 |---------------|---------------|---------------|---------------|---------------|
-| ![](images/team/holly.png){width="100"} | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/) | Lab TA                       | W 1:25PM - 2:40PM | TBA          |
-| ![](images/team/eli.png){width="100"}   | [Eli Gnesin](https://www.linkedin.com/in/elignesin/)          | Head + Lab TA                | W 3:05PM - 4:20PM | TBA          |
-| ![](images/team/kelsey.png)             | [Kelsey Brod](https://www.kelseybrod.com/)                    | Project lead + Lecture TA    |                   | TBA          |
-| ![](images/team/shelby.png)             | [Shelby Tisdale](https://www.linkedin.com/in/shelby-tisdale/) | Project support + Lecture TA |                   | TBA          |
-| ![](images/team/glenn.png)              | [Glenn Palmer](https://scholars.duke.edu/person/glenn.palmer) |                              |                   | TBA          |
+| ![](images/team/holly.png){width="100"}  | [Holly Cui](https://www.linkedin.com/in/holly-cui-4b4520236/) | Lab TA                       | W 1:25PM - 2:40PM | TBA          |
+| ![](images/team/eli.png){width="100"}    | [Eli Gnesin](https://www.linkedin.com/in/elignesin/)          | Head + Lab TA                | W 3:05PM - 4:20PM | TBA          |
+| ![](images/team/kelsey.png){width="100"} | [Kelsey Brod](https://www.kelseybrod.com/)                    | Project lead + Lecture TA    |                   | TBA          |
+| ![](images/team/shelby.png){width="100"} | [Shelby Tisdale](https://www.linkedin.com/in/shelby-tisdale/) | Project support + Lecture TA |                   | TBA          |
+| ![](images/team/glenn.png){width="100"}  | [Glenn Palmer](https://scholars.duke.edu/person/glenn.palmer) |                              |                   | TBA          |
