--- a/course-overview.qmd
+++ b/course-overview.qmd
@@ -8,11 +8,11 @@ You can find the course syllabus [here](/syllabus) and the course schedule [here
 
 ## Class meetings
 
-| Meeting | Location                       | Time                        |
-|---------|--------------------------------|-----------------------------|
-| Lecture | Old Chemistry 116.             | Tue & Thur 12:00 - 13:15 pm |
-| Lab 01  | Perkins Link 087 (Classroom 3) | Wed 1:45 - 3:00 pm          |
-| Lab 02  | Perkins Link 087 (Classroom 3) | Wed 3:30 - 4:45 pm          |
+| Meeting | Location         | Time                        |
+|---------|------------------|-----------------------------|
+| Lecture | LSRC D106        | Tue & Thur 10:05 - 11:20 pm |
+| Lab 1   | Link Classroom 5 | Wed 1:25 - 2:40 pm          |
+| Lab 2   | Link Classroom 5 | Wed 3:05 - 4:20 pm          |
 
 <br>
 
